[package]
name = "build-it"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A derive-macro for simple builder-pattern generation"
readme = "README.md"
authors = ["Ben Püschel"]
repository = "https://github.com/benpueschel/build-it"
keywords = ["derive", "macro", "builder", "pattern"]
categories = ["development-tools"]
exclude = [".github/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["full"] }
